--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  max-width: 1280px;
+ /* margin: 0 auto; */
+ padding: 10px; 
+  /* text-align: start; */
+} 
+
+header {
+    width: 100%;
+    padding-left: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.3);
+    /* margin-bottom: 20px; */
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,16 +41,20 @@ a:hover {
 }
 
 body {
+  padding-top: 60px;
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 button {
